--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Central de Atendimento</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Central de Atendimento Oasis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="center">
-    <div class="card">
-        <h1>Central de Atendimento</h1>
-        <a class="btn-login" href="https://discord.com/api/oauth2/authorize?client_id=1450905109083979785&redirect_uri=https%3A%2F%2Fhinarahelo.github.io%2Fsistema-oasis%2Fcallback.html&response_type=code&scope=identify">
-            Login com Discord
-        </a>
-    </div>
+
+<body class="dark center">
+
+  <div class="card">
+    <h2>🌹 Central de Atendimento</h2>
+    <p style="color:#ffb3b3; margin-bottom:25px;">
+      Faça login com seu Discord para abrir solicitações
+    </p>
+
+    <!-- LOGIN DISCORD -->
+    <a
+      href="https://discord.com/oauth2/authorize
+      ?client_id=1450905109083979785
+      &response_type=code
+      &redirect_uri=https%3A%2F%2Fhinarahelo.github.io%2Fsistema-oasis%2Fcallback.html
+      &scope=identify+email"
+      style="
+        display:block;
+        text-align:center;
+        text-decoration:none;
+        padding:16px;
+        border-radius:14px;
+        background:linear-gradient(135deg,#7a0000,#b30000);
+        color:white;
+        font-weight:bold;
+        font-size:16px;
+      "
+    >
+      🔐 Entrar com Discord
+    </a>
+
+    <p style="margin-top:25px;font-size:13px;color:#aaa;">
+      Sistema Oasis • Login seguro via Discord
+    </p>
+  </div>
+
 </body>
 </html>
