--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
   <meta charset="UTF-8">
   <title>Central de Atendimento Oasis</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body.center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+  </style>
 </head>
 
 <body class="dark center">
 
   <div class="card">
-    <h2>🌹 Central de Atendimento</h2>
+    <h2>🌹 Central de Atendimento Oasis</h2>
+
     <p style="color:#ffb3b3; margin-bottom:25px;">
       Faça login com seu Discord para abrir solicitações
     </p>
 
-    <!-- LOGIN DISCORD -->
+    <!-- LOGIN DISCORD (NÃO AUTOMÁTICO) -->
     <a
-      href="https://discord.com/oauth2/authorize
-      ?client_id=1450905109083979785
-      &response_type=code
-      &redirect_uri=https%3A%2F%2Fhinarahelo.github.io%2Fsistema-oasis%2Fcallback.html
-      &scope=identify+email"
+      href="https://sistema-oasis-auth.hinarahelo.workers.dev/login"
       style="
         display:block;
         text-align:center;
