--- a/auth.html
+++ b/auth.html
@@ -3,21 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Autenticando...</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #1a1a1a;
-      color: #fff;
-      margin: 0;
-    }
-    p {
-      font-size: 18px;
-    }
-  </style>
 </head>
 <body>
   <p>Autenticando, aguarde...</p>
@@ -33,26 +18,21 @@
     }
 
     try {
-      // Decodifica o payload enviado pelo Worker
       const user = JSON.parse(atob(payload));
 
-      // Estrutura única e consistente usada em TODO o site
       const usuario = {
         nome: user.nome,
-        cid: user.id || user.discordId || user.cid,
+        cid: user.id,
         nivel: user.nivel || "cidadao"
       };
 
-      // Salva sessão
       localStorage.setItem("usuario", JSON.stringify(usuario));
 
-      // Redireciona para o sistema
       window.location.href = "tickets.html";
-
     } catch (e) {
       console.error(e);
-      alert("Erro ao processar login");
       localStorage.removeItem("usuario");
+      alert("Erro ao processar login");
       window.location.href = "index.html";
     }
   </script>
