--- a/staff/dashboard.html
+++ b/staff/dashboard.html
@@ -4,34 +4,6 @@
   <meta charset="UTF-8">
   <title>Dashboard • Oasis</title>
   <link rel="stylesheet" href="../style.css">
-  <style>
-    .stats {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 15px;
-    }
-    .stat {
-      flex: 1;
-      padding: 12px;
-      border-radius: 10px;
-      background: #330000;
-      text-align: center;
-      font-weight: bold;
-    }
-    .tag {
-      display: inline-block;
-      padding: 3px 8px;
-      border-radius: 6px;
-      font-size: 12px;
-      margin-top: 4px;
-    }
-    .aberto { background:#7a0000; }
-    .atendimento { background:#b36b00; }
-    .fechado { background:#2e7d32; }
-    .filtro {
-      margin-bottom: 10px;
-    }
-  </style>
 </head>
 <body class="dark">
 
@@ -46,6 +18,11 @@
     alert("Acesso restrito");
     location.href = "../index.html";
   }
+
+  function logout() {
+    localStorage.removeItem("usuario");
+    location.href = "../index.html";
+  }
 </script>
 
 <div class="layout">
@@ -53,12 +30,12 @@
     <h2>👮 Staff</h2>
     <button onclick="abrirAba('dashboard')">📊 Dashboard</button>
     <button onclick="abrirAba('tickets')">🎫 Tickets</button>
+    <button onclick="logout()" style="margin-top:15px;">🚪 Sair</button>
   </aside>
 
   <main class="content">
     <section id="dashboard" class="aba active">
       <h2>📊 Visão Geral</h2>
-
       <div class="stats">
         <div class="stat">Abertos<br><span id="qtd-abertos">0</span></div>
         <div class="stat">Em Atendimento<br><span id="qtd-atendimento">0</span></div>
@@ -68,16 +45,6 @@
 
     <section id="tickets" class="aba">
       <h2>🎫 Tickets</h2>
-
-      <div class="filtro">
-        <select id="filtro-status" onchange="aplicarFiltro()">
-          <option value="todos">Todos</option>
-          <option value="aberto">Abertos</option>
-          <option value="atendimento">Em Atendimento</option>
-          <option value="fechado">Fechados</option>
-        </select>
-      </div>
-
       <div id="lista-tickets"></div>
     </section>
   </main>
