--- a/tickets.html
+++ b/tickets.html
@@ -7,28 +7,25 @@
   <style>
     .aba { display:none; }
     .aba.active { display:block; }
-    .topbar {
-      display:flex; justify-content:space-between; align-items:center;
-      margin-bottom:10px;
-    }
-    .loader {
-      display:none; text-align:center; margin-top:20px;
+    .anexo {
+      display:block;
+      margin:4px 0;
+      font-size:14px;
     }
   </style>
 </head>
 <body class="dark">
 
 <script>
-  // Proteção de acesso
-  let usuario = null;
+  let usuario;
   try {
     usuario = JSON.parse(localStorage.getItem("usuario"));
-    if (!usuario || !usuario.nivel) throw new Error();
+    if (!usuario) throw new Error();
   } catch {
     location.href = "https://sistema-oasis-auth.hinarahelo.workers.dev/login";
   }
 
-  function logout() {
+  function logout(){
     localStorage.removeItem("usuario");
     location.href = "index.html";
   }
@@ -39,33 +36,14 @@
     <h2>🎫 Atendimento</h2>
     <button onclick="abrirAba('solicitacoes')">🛒 Solicitações</button>
     <button onclick="abrirAba('historico')">🧾 Histórico</button>
-
-    <script>
-      if (usuario.nivel === "juridico" || usuario.nivel === "coordenacao") {
-        document.write(`<a href="staff/dashboard.html">👮 Painel Staff</a>`);
-      }
-    </script>
-
-    <button onclick="logout()" style="margin-top:15px;">🚪 Sair</button>
+    <button onclick="logout()">🚪 Sair</button>
   </aside>
 
   <main class="content">
-    <div class="topbar">
-      <h2>Bem-vindo, <span id="user-nome"></span></h2>
-    </div>
-
-    <div class="loader" id="loader">Carregando...</div>
-
     <section id="solicitacoes" class="aba active">
       <h3>🛒 Solicitações</h3>
-      <div class="processos">
-        <button onclick="abrirSolicitacao('Troca de Nome')">📜 Troca de Nome</button>
-        <button onclick="abrirSolicitacao('Adoção')">👶 Adoção</button>
-        <button onclick="abrirSolicitacao('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
-        <button onclick="abrirSolicitacao('Nascimento')">👼 Nascimento</button>
-        <button onclick="abrirSolicitacao('Porte de Arma')">🔫 Porte de Arma</button>
-        <button onclick="abrirSolicitacao('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
-      </div>
+      <button onclick="abrirSolicitacao('Troca de Nome')">📜 Troca de Nome</button>
+      <button onclick="abrirSolicitacao('Adoção')">👶 Adoção</button>
     </section>
 
     <section id="historico" class="aba">
@@ -75,16 +53,17 @@
 
     <section id="chat" class="aba">
       <h3 id="chat-titulo"></h3>
+
       <div id="mensagens"></div>
+
+      <input type="file" id="arquivo" />
       <textarea id="mensagem" placeholder="Digite sua mensagem..."></textarea>
+
       <button onclick="enviarMensagem()">Enviar</button>
     </section>
   </main>
 </div>
 
-<script>
-  document.getElementById("user-nome").innerText = usuario.nome;
-</script>
 <script type="module" src="script.js"></script>
 </body>
 </html>
