--- a/tickets.html
+++ b/tickets.html
@@ -3,46 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>Tickets • Oasis</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body { background:#111; color:#fff; font-family:Arial }
+    button { display:block; margin:10px 0; padding:10px }
+    #mensagens { border:1px solid #444; min-height:100px; padding:10px }
+  </style>
 </head>
-<body class="dark">
+<body>
+
+<h2>🎫 Atendimento Oasis</h2>
+
+<button onclick="teste('Troca de Nome')">Troca de Nome</button>
+<button onclick="teste('Adoção')">Adoção</button>
+<button onclick="teste('Nascimento')">Nascimento</button>
+
+<h3 id="titulo">Nenhum ticket</h3>
+<div id="mensagens"></div>
 
 <script>
-  const usuario = JSON.parse(localStorage.getItem("usuario"));
-  if (!usuario) {
-    location.href = "https://sistema-oasis-auth.hinarahelo.workers.dev/login";
+  console.log("JS CARREGADO");
+
+  function teste(categoria) {
+    console.log("BOTÃO CLICADO:", categoria);
+    document.getElementById("titulo").innerText = "💬 " + categoria;
+    document.getElementById("mensagens").innerHTML +=
+      "<p>Ticket criado para: <b>" + categoria + "</b></p>";
   }
 </script>
-
-<div class="layout">
-  <aside class="sidebar">
-    <h2>🎫 Atendimento</h2>
-    <button onclick="abrirSolicitacao('Troca de Nome')">📜 Troca de Nome</button>
-    <button onclick="abrirSolicitacao('Adoção')">👶 Adoção</button>
-    <button onclick="abrirSolicitacao('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
-    <button onclick="abrirSolicitacao('Nascimento')">👼 Nascimento</button>
-    <button onclick="abrirSolicitacao('Porte de Arma')">🔫 Porte de Arma</button>
-    <button onclick="abrirSolicitacao('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
-    <button onclick="logout()">🚪 Sair</button>
-  </aside>
-
-  <main class="content">
-    <section id="chat">
-      <h2 id="chat-titulo">Selecione um atendimento</h2>
-      <div id="mensagens"></div>
-      <input id="anexoLink" placeholder="Link do anexo (opcional)">
-      <textarea id="mensagem" placeholder="Digite sua mensagem..."></textarea>
-      <button onclick="enviarMensagem()">Enviar</button>
-    </section>
-  </main>
-</div>
-
-<!-- 🔥 FIREBASE CDN (OBRIGATÓRIO) -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-
-<!-- SEU SCRIPT -->
-<script src="script.js"></script>
 
 </body>
 </html>
