--- a/tickets.html
+++ b/tickets.html
@@ -2,34 +2,46 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Tickets • Oasis</title>
-  <style>
-    body { background:#111; color:#fff; font-family:Arial }
-    button { display:block; margin:10px 0; padding:10px }
-    #mensagens { border:1px solid #444; min-height:100px; padding:10px }
-  </style>
+  <title>🎫 Atendimento Oasis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-<h2>🎫 Atendimento Oasis</h2>
-
-<button onclick="teste('Troca de Nome')">Troca de Nome</button>
-<button onclick="teste('Adoção')">Adoção</button>
-<button onclick="teste('Nascimento')">Nascimento</button>
-
-<h3 id="titulo">Nenhum ticket</h3>
-<div id="mensagens"></div>
+<body class="dark">
 
 <script>
-  console.log("JS CARREGADO");
-
-  function teste(categoria) {
-    console.log("BOTÃO CLICADO:", categoria);
-    document.getElementById("titulo").innerText = "💬 " + categoria;
-    document.getElementById("mensagens").innerHTML +=
-      "<p>Ticket criado para: <b>" + categoria + "</b></p>";
+  const usuario = JSON.parse(localStorage.getItem("usuario"));
+  if (!usuario) {
+    location.href = "https://sistema-oasis-auth.hinarahelo.workers.dev/login";
   }
 </script>
+
+<div class="layout">
+  <aside class="sidebar">
+    <h2>🎫 Atendimento Oasis</h2>
+
+    <button onclick="abrirSolicitacao('Troca de Nome')">Troca de Nome</button>
+    <button onclick="abrirSolicitacao('Adoção')">Adoção</button>
+    <button onclick="abrirSolicitacao('Nascimento')">Nascimento</button>
+
+    <button onclick="logout()">🚪 Sair</button>
+  </aside>
+
+  <main class="content">
+    <h3 id="chat-titulo">Selecione um atendimento</h3>
+
+    <div id="mensagens" class="chat"></div>
+
+    <textarea id="mensagem" placeholder="Digite sua mensagem..."></textarea>
+    <button onclick="enviarMensagem()">Enviar</button>
+  </main>
+</div>
+
+<!-- 🔥 Firebase COMPAT (OBRIGATÓRIO) -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+<!-- Script principal -->
+<script src="script.js"></script>
 
 </body>
 </html>
