--- a/tickets.html
+++ b/tickets.html
@@ -5,113 +5,69 @@
   <title>Atendimento Oasis</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body class="dark">
-
-<script>
-  const usuario = JSON.parse(localStorage.getItem("usuario"));
-  if (!usuario) {
-    location.href = "https://sistema-oasis-auth.hinarahelo.workers.dev/login";
-  }
-</script>
 
 <div class="layout">
 
-  <!-- MENU LATERAL -->
+  <!-- SIDEBAR -->
   <aside class="sidebar">
     <h2>🏛️ Atendimento Oasis</h2>
 
-    <button onclick="abrirAba('solicitacao')">🎫 Faça sua Solicitação</button>
-    <button onclick="abrirAba('tickets')">🎫 Tickets</button>
-    <button onclick="abrirAba('precos')">💰 Preços</button>
-
-    <button onclick="logout()">🚪 Sair</button>
+    <button onclick="mostrarAba('solicitacoes')">🎫 Faça sua Solicitação</button>
+    <button onclick="mostrarAba('tickets')">🎫 Tickets</button>
+    <button onclick="mostrarAba('precos')">💰 Preços</button>
+    <button onclick="sair()">🚪 Sair</button>
   </aside>
 
   <!-- CONTEÚDO -->
   <main class="content">
 
-    <!-- ABA 1 - SOLICITAÇÃO -->
-    <section id="solicitacao" class="aba ativa">
-
+    <!-- ABA SOLICITAÇÕES -->
+    <section id="solicitacoes" class="aba active">
       <h2>🎫 Sistema de Tickets</h2>
-      <p>
-        Bem-vindo ao nosso sistema de atendimento.<br><br>
-        Para abrir um ticket, selecione a categoria correspondente ao seu problema.<br><br>
+      <p>Bem-vindo ao nosso sistema de atendimento.</p>
 
-        📋 Informações importantes:<br>
-        • Apenas usuários autorizados podem criar tickets<br>
-        • Limite de 1 ticket ativo por categoria<br>
-        • Atendimento em até 24 horas<br>
-        • Mantenha a conversa respeitosa
-      </p>
-
-      <hr>
+      <ul>
+        <li>• Apenas usuários autorizados podem criar tickets</li>
+        <li>• Limite de 1 ticket ativo por categoria</li>
+        <li>• Atendimento em até 24 horas</li>
+        <li>• Mantenha a conversa respeitosa</li>
+      </ul>
 
       <h3>📂 Solicitações</h3>
-
-      <div class="categorias">
-        <button onclick="abrirTicket('Troca de Nome')">📜 Troca de Nome</button>
-        <button onclick="abrirTicket('Adoção')">👶 Adoção</button>
-        <button onclick="abrirTicket('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
-        <button onclick="abrirTicket('Divórcio')">💔 Divórcio</button>
-        <button onclick="abrirTicket('Casamento')">💍 Casamento</button>
-        <button onclick="abrirTicket('Nascimento')">👼 Nascimento</button>
-        <button onclick="abrirTicket('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
-        <button onclick="abrirTicket('Porte de Arma')">🔫 Porte de Arma</button>
+      <div class="grid">
+        <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
+        <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
+        <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
+        <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
+        <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
+        <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
+        <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
+        <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
+        <button onclick="abrirCategoria('Abertura de CNPJ')">🏢 Abertura de CNPJ</button>
       </div>
-
-      <hr>
-
-      <h3 id="chat-titulo">Selecione uma categoria</h3>
-      <div id="mensagens" class="chat"></div>
-
-      <textarea id="mensagem" placeholder="Digite sua mensagem..."></textarea>
-      <button onclick="enviarMensagem()">Enviar</button>
-
     </section>
 
-    <!-- ABA 2 - TICKETS -->
+    <!-- ABA TICKETS -->
     <section id="tickets" class="aba">
-
       <h2>🎫 Tickets</h2>
 
-      <div class="categorias">
-        <button onclick="abrirTicket('Denúncia')">
-          ⚠️ Denúncia<br><small>Reportar problema ou infração</small>
-        </button>
-
-        <button onclick="abrirTicket('Falar com o Juiz')">
-          ⚖️ Falar com o Juiz<br><small>Contato direto com o Juiz</small>
-        </button>
-
-        <button onclick="abrirTicket('Suporte')">
-          🛠️ Suporte<br><small>Dúvidas ou ajuda</small>
-        </button>
-
-        <button onclick="abrirTicket('Processos')">
-          📁 Processos<br><small>Acompanhar processos</small>
-        </button>
+      <div class="grid">
+        <button onclick="abrirCategoria('Denúncia')">⚠️ Denúncia</button>
+        <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
+        <button onclick="abrirCategoria('Suporte')">🛠️ Suporte</button>
+        <button onclick="abrirCategoria('Processos')">📂 Processos</button>
       </div>
-
-      <hr>
-
-      <h3 id="chat-titulo-tickets">Selecione um ticket</h3>
-      <div id="mensagens-tickets" class="chat"></div>
-
-      <textarea id="mensagem-tickets" placeholder="Digite sua mensagem..."></textarea>
-      <button onclick="enviarMensagemTickets()">Enviar</button>
-
     </section>
 
-    <!-- ABA 3 - PREÇOS -->
+    <!-- ABA PREÇOS -->
     <section id="precos" class="aba">
-<pre>
+      <pre>
 ⚖️ Serviços Disponíveis ao Público – Supremo Tribunal Oasis ⚖️
 
-🏛️ Atendimentos Jurídicos:
-- Delegacia Sul: $20.000
-- Delegacia PRF: $30.000
+🏛️ Atendimentos Jurídicos
+• Delegacia Sul: $20.000
+• Delegacia PRF: $30.000
 
 Redução de Pena:
 • Advogado: -20%
@@ -119,10 +75,10 @@ Redução de Pena:
 • Bom comportamento: -10%
 • Total possível: até 40%
 
-🔫 Porte de Arma:
+🔫 Porte de Arma
 • Emissão: $20.000
 
-💍 Certidões Civis:
+💍 Certidões Civis
 • Casamento: $150.000
 • Divórcio: $200.000
 • Troca de Nome: $250.000
@@ -130,23 +86,29 @@ Redução de Pena:
 • Nascimento: $50.000
 • Jovem Aprendiz: $30.000
 
-🏢 Alvará:
+🏢 Alvará
 • Abertura: $150.000
 • Renovação: $60.000
 
-🧾 Ações Jurídicas:
+🧾 Ações Jurídicas
 • Ação Judicial: $50.000
-• Limpeza de Ficha: $50.000 (1–3)
-Obs: A partir da 4ª ocorrência +$10.000
-</pre>
+• Limpeza de Ficha: $50.000 (1 a 3)
+• A partir da 4ª: +$10.000
+      </pre>
+    </section>
+
+    <!-- CHAT -->
+    <section id="chat" class="aba">
+      <h2 id="chatTitulo"></h2>
+      <div id="mensagens" class="chat"></div>
+
+      <textarea id="mensagem" placeholder="Digite sua mensagem..."></textarea>
+      <button onclick="enviarMensagem()">Enviar</button>
     </section>
 
   </main>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-<script src="script.js"></script>
-
+<script type="module" src="script.js"></script>
 </body>
 </html>
