--- a/index.html
+++ b/index.html
@@ -5,32 +5,17 @@
   <title>Central de Atendimento Oasis</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="dark center">
+<body class="center dark">
 
-  <div class="card">
-    <h2>🌹 Central de Atendimento Oasis</h2>
+<div class="card">
+  <h2>🌹 Central de Atendimento Oasis</h2>
+  <p>Faça login com seu Discord para abrir solicitações</p>
 
-    <p style="color:#ffb3b3; margin-bottom:25px;">
-      Faça login com seu Discord para abrir solicitações
-    </p>
-
-    <a
-      href="https://sistema-oasis-auth.hinarahelo.workers.dev/login"
-      style="
-        display:block;
-        text-align:center;
-        text-decoration:none;
-        padding:16px;
-        border-radius:14px;
-        background:linear-gradient(135deg,#7a0000,#b30000);
-        color:white;
-        font-weight:bold;
-        font-size:16px;
-      "
-    >
-      🔐 Entrar com Discord
-    </a>
-  </div>
+  <a class="btn"
+     href="https://sistema-oasis-auth.hinarahelo.workers.dev/login">
+     🔐 Entrar com Discord
+  </a>
+</div>
 
 </body>
 </html>
